# decoding_cellular_identities_repro

./: .gitignore  README.md  notebook.ipynb  pyproject.toml  requirements.txt
experiments/: state-ae__norm-minmax-trainonly__split-90-10__seed-42__model-lat2__date-20260220.ipynb
scripts/: install.sh  run_notebook.sh
